apps/news-app-api/overlays/staging/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-app-api
  namespace: news-app-api
spec:
  replicas: 2
